# gen12_strategy_recruitment

./: CMakeLists.txt  README.md  main.cpp
data/: baseroute.csv  dni.csv
include/: Car.hpp  CustomTime.hpp  Luts.hpp  Sim.hpp  Utils.hpp  date.h
src/: Car.cpp  CustomTime.cpp  Luts.cpp  Sim.cpp  Utils.cpp
